Fixed sidebar overflow -  scroll

--- a/frontend/src/components/styles/Footer.css
+++ b/frontend/src/components/styles/Footer.css
@@ -1,5 +1,4 @@
 footer {
-  width: 100%;
   height: 40px;
   background: var(--white);
   display: flex;
