--- a/frontend/src/components/styles/Timeline.css
+++ b/frontend/src/components/styles/Timeline.css
@@ -59,8 +59,8 @@
   content: ' ';
   background-color: var(--white);
   position: absolute;
-  right: -7.5px;
-  top: calc(50% - 7.5px);
+  right: -9px;
+  top: calc(50% - 9px);
   transform: rotate(45deg);
   width: 15px;
   height: 15px;
@@ -72,7 +72,7 @@
 
 .timeline_item:nth-child(odd) .timeline_item_content::after {
   right: auto;
-  left: -7.5px;
+  left: -9px;
   border: 2px solid var(--gray);
   border-top-color: transparent;
   border-right-color: transparent;
@@ -87,7 +87,7 @@
   border-radius: 50%;
   position: absolute;
   top: calc(50% - 5px);
-  right: -35px;
+  right: -37px;
   width: 10px;
   height: 10px;
   z-index: 2;
@@ -102,7 +102,7 @@
   justify-content: center;
   align-items: center;
   top: calc(50% - 10px);
-  right: -40px;
+  right: -42px;
   width: 20px;
   height: 20px;
   cursor: pointer;
@@ -127,11 +127,11 @@
 }
 
 .timeline_item:nth-child(odd) .timeline_item_content .point {
-  left: -35px;
+  left: -37px;
 }
 
 .timeline_item:nth-child(odd) .timeline_item_content .remove_btn {
-  left: -40px;
+  left: -42px;
 }
 
 .timeline_item:nth-child(odd) .timeline_item_content .date {
@@ -147,7 +147,7 @@
 
 .timeline_container.horizontal .timeline_item_content .remove_btn {
   top: calc(100% + 20px);
-  right: calc(50% - 7.5px);
+  right: calc(50% - 9px);
 }
 
 .timeline_container.horizontal .timeline_item_content .date {
@@ -187,8 +187,8 @@
 .timeline_container.horizontal .timeline_item_content::after,
 .timeline_container.horizontal .timeline_item:nth-child(odd) .timeline_item_content::after {
   position: absolute;
-  right: calc(50% - 7.5px);
-  top: calc(100% - 7.5px);
+  right: calc(50% - 9px);
+  top: calc(100% - 9px);
   width: 15px;
   height: 15px;
 }
@@ -264,7 +264,7 @@
 
   .timeline_container .timeline_item_content::after {
     right: auto;
-    left: -7.5px;
+    left: -9px;
     border-bottom-color: var(--gray);
     border-left-color: var(--gray);
     border-top-color: transparent;
